# sendspin-rs

./: AGENTS.md  Cargo.toml  README.md  flake.nix  result  rust-toolchain.toml  spec.md
.claude/: plan.md  settings.local.json
examples/: minimal_test.rs  player.rs  server.rs
src/: lib.rs  main.rs
src/audio/output/: cpal_output.rs
src/protocol/: client.rs  messages.rs
src/server/: audio_engine.rs  audio_source.rs  cli.rs  client_handler.rs  client_manager.rs  clock.rs  config.rs  encoder.rs  group.rs  mod.rs  server.rs  tui.rs
tests/: audio_output.rs
