[package]
name = "sendspin"
version = "0.1.0"
edition = "2021"
authors = ["Sendspin Contributors"]
description = "Hyper-efficient Rust implementation of the Sendspin Protocol for synchronized multi-room audio streaming"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Sendspin/sendspin-rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Web server (for sendspin server)
axum = { version = "0.8", features = ["ws"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Error handling
thiserror = "1.0"

# Utilities
log = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Audio output
cpal = "0.15"

# Concurrency
crossbeam = "0.8"

# Fast mutexes
parking_lot = "0.12"

# Tracing (server logging)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Audio decoding
symphonia = { version = "0.5", features = ["mp3", "flac", "wav", "aac", "pcm", "isomp4"] }

# HTTP client for URL streaming (ureq is pure sync, no runtime conflicts)
ureq = { version = "2.10", features = ["tls"] }

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11"

[[example]]
name = "server"
path = "examples/server.rs"

[[bin]]
name = "sendspin"
path = "src/main.rs"

[[bin]]
name = "sendspin-server"
path = "src/bin/server.rs"

[[bin]]
name = "sendspin-server-tui"
path = "src/bin/server_tui.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
